--- a/css/styles.css
+++ b/css/styles.css
@@ -1,11 +1,36 @@
 body{
     margin: 0px;
+    text-align: center;
+    background-color: #C1FFD7;
 }
-#name{
+.Name{
     margin-top: 0px;
     margin-bottom: 0px;
-}
-.about-me{
-    background-color: #C1FFD7;
+    position:relative;
+    top:150px;
     
+    
+}
+.top-container{
+    background-color: #C1FFD7;
+    padding: 5px;
+    margin-bottom: 5px;
+}
+
+.pro{
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+.bottom-cloud{
+    position:absolute;
+    bottom: 300px;
+}
+
+.top-cloud{
+    position:absolute;
+    right:350px;
+    top:115px;
+}
+.mountain{
+    position:relative;
+    top: 150px;
 }
