--- a/css/styles.css
+++ b/css/styles.css
@@ -40,6 +40,7 @@ body{
 h2{
     font-family: 'Montserrat', sans-serif;
     font-weight: normal;
+    color:#11999E
 }
 h3{
     font-family: 'Montserrat', sans-serif;
@@ -51,6 +52,11 @@ h1{
 .middle-container{
     margin-top: 150px;
 }
+.bottom-container{
+    margin-top: 20px;
+    height: 50px;
+    padding: 50px;
+}
 a{
     color:#11999E;
     margin-left: 5px;
@@ -58,13 +64,61 @@ a{
 }
 .skill-row{
     width:50%;
-    margin:100px auto 100px auto;
+    margin:0 auto 100px auto;
     text-align: left;
     line-height: 2;
+    
 }
 .first{
     width: 25%;
+    float:left;
+    margin-right:30px;
+    position: relative;
+    top: 20px;
+
 }
 .second{
     width: 25%;
+    float:right;
+    position:relative;
+    right:100px;
+
 }
+.footer-link{
+    color: #11999E;
+    text-decoration: none;
+
+}
+hr{
+    border-style: dotted none none ;
+    width: 40px;
+    border-width: 5px;
+    color:#FFFFFF;
+}
+.btn {
+  
+    background: #3498db;
+    background-image: -webkit-linear-gradient(top, #3498db, #2980b9);
+    background-image: -moz-linear-gradient(top, #3498db, #2980b9);
+    background-image: -ms-linear-gradient(top, #3498db, #2980b9);
+    background-image: -o-linear-gradient(top, #3498db, #2980b9);
+    background-image: linear-gradient(to bottom, #3498db, #2980b9);
+    -webkit-border-radius: 13;
+    -moz-border-radius: 13;
+    border-radius: 13px;
+    font-family: 'Montserrat',sans-serif;
+    color: #ffffff;
+    font-size: 20px;
+    padding: 10px 20px 10px 20px;
+    text-decoration: none;
+  }
+  
+  .btn:hover {
+    background: #3cb0fd;
+    background-image: -webkit-linear-gradient(top, #3cb0fd, #3498db);
+    background-image: -moz-linear-gradient(top, #3cb0fd, #3498db);
+    background-image: -ms-linear-gradient(top, #3cb0fd, #3498db);
+    background-image: -o-linear-gradient(top, #3cb0fd, #3498db);
+    background-image: linear-gradient(to bottom, #3cb0fd, #3498db);
+    text-decoration: none;
+  }
